# beancount-ledger

./: AGENTS.md  README.md  pyproject.toml  start-llm.sh
.system/: ledger_master_blueprint.md
.zed/: settings.json
docs/: app_specification.md
src/beancount_ledger/: afstem.py  bank_transaction.py  config_parser.py  context.py  image_parse_test.py  main.py  moms_luk.py  opdater.py  transaction.py  util.py
